# llma4se-2025

./: .gitignore  README.md
talk/: README.md  build.sh  emfatic.xml  slides.css  slides.md
talk/examples/: 03-cond_edges.py  pyproject.toml
talk/examples/lg-basic/: 01-hello_bye.py  02-reducer.py  pyproject.toml
talk/examples/lg-llm-with_server/: .env.template  langgraph.json  pyproject.toml  run-server.sh
talk/examples/lg-llm-with_server/src/agent/: __init__.py  chatbot.py  graph.py  interruptible_searcher.py  searcher.py
talk/examples/lg-llm-without_server/: 01-start.py  02-thread.py  03-checkpointer.py  04-multiply.py  README.md  pyproject.toml
talk/examples/smolagents/: 01-searcher.py  02-qwen.py  03-tool_input.py  04-docker.py  05-sort-dates.py  Dockerfile  README.md  build-docker.sh  pyproject.toml
talk/img/: emfatic-agents-dark.graphml
workshop/: README.md  build.sh  slides.css  slides.md
workshop/exercises/: README.md  langgraph.json  pyproject.toml
workshop/exercises/src/prebuilt_searcher/: graph.py
workshop/exercises/src/travel_planner/: context.py  graph.py  state.py
workshop/solutions/: .env.example  README.md  langgraph.json  pyproject.toml
workshop/solutions/src/prebuilt_searcher/: graph.py
workshop/solutions/src/tdd/: __init__.py  graph.py  state.py
workshop/solutions/src/travel_planner/: __init__.py  context.py  graph.py  state.py
