[project]
name = "chat-lgserver"
version = "0.0.1"
description = "Basic LangGraph example using LangGraph Server and its built-in checkpointer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-mcp-server>=0.1.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "langgraph-cli[inmem]>=0.3.8",
]
